# nzskkserv

./: .gitignore  .neoconf.json  Cargo.toml  Makefile.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
nzskkserv/: Cargo.toml
nzskkserv-cli/: Cargo.toml
nzskkserv-cli/src/: config.rs  dict_utils.rs  main.rs
nzskkserv-core/: Cargo.toml
nzskkserv-core/src/: config.rs  dict_utils.rs  error.rs  handler.rs  lib.rs  log.rs  manager.rs
nzskkserv-core/src/server/: codec.rs  error.rs  interface.rs  mod.rs  process.rs
nzskkserv-core/src/skk_impl/: codec.rs  mod.rs
nzskkserv-gui/: Cargo.toml  Dioxus.toml  app.rc  build.rs  input.css  nzskkserv-gui.exe.manifest  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
nzskkserv-gui/assets/: main.css
nzskkserv-gui/icons/: icon.icns
nzskkserv-gui/src/: App.tsx  app.rs  app_old.rs  config.rs  dict_utils.rs  index.html  log.rs  logger.rs  main.css  main.rs  main.tsx  tray.rs
nzskkserv-gui/src-tauri/: Cargo.toml  tauri.conf.json
nzskkserv-gui/src-tauri/src/: main.rs
nzskkserv-gui/src/app/: config.rs  log.rs  mod.rs  server_state.rs  start_stop_btn.rs  tray.rs
nzskkserv-gui/src/app/config/: dict_editor.rs  dict_table.rs  general_config.rs  mod.rs  server_toggle_button.rs
nzskkserv-gui/src/dict_utils/: mod.rs
nzskkserv-gui/src/server/: handler.rs  mod.rs
nzskkserv-gui/src/server/handler/: dict.rs  google.rs  mod.rs
nzskkserv-gui/src/server/handler/dict/: mozc.rs  skk.rs
nzskkserv-lib/: Cargo.toml
nzskkserv-lib/src/: lib.rs
nzskkserv-server/: Cargo.toml
nzskkserv-server/src/: decoder.rs  error.rs  handler.rs  interface.rs  lib.rs  server.rs  shutdown.rs
nzskkserv-server/src/server/: codec.rs  dict.rs  error.rs  interface.rs  mod.rs  process.rs
nzskkserv/src/: lib.rs
nzskkserv_gui/: Makefile.toml  README.md  pubspec.yaml
nzskkserv_gui/android/app/: build.gradle
nzskkserv_gui/android/app/src/debug/: AndroidManifest.xml
nzskkserv_gui/android/app/src/main/: AndroidManifest.xml
nzskkserv_gui/android/app/src/main/kotlin/com/example/nzskkserv_gui/: MainActivity.kt
nzskkserv_gui/ios/Runner/: Info.plist
nzskkserv_gui/ios/Runner.xcodeproj/: project.pbxproj
nzskkserv_gui/lib/: bridge_generated.dart  ffi.dart  main.dart
nzskkserv_gui/linux/: CMakeLists.txt  my_application.cc
nzskkserv_gui/macos/Runner.xcodeproj/: project.pbxproj
nzskkserv_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nzskkserv_gui/macos/Runner/Configs/: AppInfo.xcconfig
nzskkserv_gui/native/: Cargo.toml
nzskkserv_gui/native/src/: api.rs  bridge_generated.rs  lib.rs
nzskkserv_gui/test/: widget_test.dart
nzskkserv_gui/web/: index.html  manifest.json
nzskkserv_gui/windows/: CMakeLists.txt
nzskkserv_gui/windows/runner/: Runner.rc  main.cpp
