[workspace]
members = ["nzskkserv-core", "nzskkserv-gui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["nazo6 <git@nazo6.dev>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.43.0" }
tracing = "0.1.41"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
