[package]
name = "nzskkserv-cli"
version = "0.1.4"
edition = "2021"

description = "A skkserv implemention."
authors = ["nazo6"]
license = "MIT"

readme = "../README.md"
homepage = "https://crates.io/crates/nzskkserv-cli"
repository = "https://github.com/nazo6/nzskkserv"

[dependencies]
tokio = { version = "1", features = ["full"] }
nzskkserv-core = { path = "../nzskkserv-core", version = "0.1" }
log = "0.4"
anyhow = "1"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
encoding_rs = "0.8"
sanitize-filename = "0.4"
reqwest = "0.11"
