[package]
name = "nzskkserv-core"
version = "0.1.4"
edition = "2021"

description = "Library to create skk server."
authors = ["nazo6"]
license = "MIT"

readme = "../README.md"
documentation = "https://docs.rs/nzskkserv-core/"
homepage = "https://crates.io/crates/nzskkserv-core"
repository = "https://github.com/nazo6/nzskkserv"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
encoding_rs = "0.8"
futures = "0.3"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
once_cell = "1"
