[package]
name = "nzskkserv-core"
version = "0.1.4"
edition = "2021"

description = "Library to create skk server."
authors = ["nazo6"]
license = "MIT"

readme = "../README.md"
documentation = "https://docs.rs/nzskkserv-core/"
homepage = "https://crates.io/crates/nzskkserv-core"
repository = "https://github.com/nazo6/nzskkserv"

[dependencies]
futures = "0.3.31"
tokio = { workspace = true, features = ["net", "rt", "io-util", "macros"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-stream = "0.1"

thiserror = "2.0.11"
bytes = "1.9.0"

encoding_rs = "0.8.35"
urlencoding = "2.1.3"
once_cell = "1.20.2"
tracing = { workspace = true }
