[package]
name = "nzskkserv-gui"
version = "0.1.0"
authors = ["nazo6 <git@nazo6.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.0", features = [] }
directories = "6.0.0"
encoding_rs = "0.8.35"
nzskkserv-core = { path = "../nzskkserv-core" }
reqwest = { version = "0.12.12", features = ["json"] }
sanitize-filename = "0.6.0"
serde = "1.0.217"
tokio.workspace = true
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
