[package]
name = "nzskkserv-gui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nzskkserv-core = { path = "../nzskkserv-core" }
dioxus = { version = "0.7.0-rc.3 ", features = [] }
anyhow = "1.0.95"
directories = "6.0.0"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.12", features = ["json"] }
sanitize-filename = "0.6.0"
serde = "1.0.217"
tokio = { workspace = true }
toml = "0.9.7"
url = { version = "2.5.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bounded-vec-deque = "0.1.1"
jiff = "0.2.15"
auto-launch = "0.5.0"
urlencoding = "2.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Console"] }

[build-dependencies]
ico = "0.4.0"
windres = "0.2.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
