[package]
name = "nzskkserv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "io-util"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
encoding_rs = "0.8"
futures = "0.3"
log = "0.4"
thiserror = "1"
async-trait = "0.1"
