[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1"
nzskkserv-core = { path = "../../nzskkserv-core", features = ["serialize"] }
once_cell = "1"
serde = "1"
serde_json = "1"
simple_logger = "2"
log = "0.4"

[lib]
crate-type = ["staticlib", "cdylib"]
